--- a/src/styles.css
+++ b/src/styles.css
@@ -18,10 +18,11 @@ canvas {
     display: block;
 }       
 
+/* matter's default graphical render */
 #container{
     width: 100vw;
     height: 100vh;
-    opacity: 0%;
+    opacity: 60%;
 }
 
 #paper {
